feat: added task status api (#28)
* feat: added task status api

* fix: linter issues

* fix: linter issues

* test: added tasks tests

* fix: prettier issues

* fix: prettier issues

* fix: prettier issues
