# openapi3.yaml
@@ -44,6 +44,44 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/internalError'
+  /taskStatus/{jobId}:
+    get:
+      tags:
+        - tasks
+      summary: Get task status by job id
+      operationId: getTaskStatusByJobId
+      parameters:
+        - name: jobId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getTaskStatusResponse'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+        '404':
+          description: Could not find task with matched jobId
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalError'
 components:
   requestBodies:
     ExportGetmapBody:
@@ -202,3 +240,20 @@ components:
       description: >-
         Bounding box corners (lower left, upper right)=[minx,miny,maxx,maxy] in
         crs units as array
+    getTaskStatusResponse:
+      type: object
+      properties:
+        percentage:
+          type: number
+          minimum: 0
+          maximum: 100
+          description: percentage of task by job id
+        status:
+          type: string
+          enum:
+            - Completed
+            - In-Progress
+            - Pending
+            - Failed
+            - Expired
+            - Aborted
