# src/createPackage/models/tasksManager.ts
@@ -1,0 +1,34 @@
+import { Logger } from '@map-colonies/js-logger';
+import { inject, injectable } from 'tsyringe';
+import { OperationStatus } from '@map-colonies/mc-priority-queue';
+import { NotFoundError } from '@map-colonies/error-types';
+import { SERVICES } from '../../common/constants';
+import { JobManagerWrapper } from '../../clients/jobManagerWrapper';
+
+export interface ITaskStatusResponse {
+  percentage: number | undefined;
+  status: OperationStatus;
+}
+
+@injectable()
+export class TasksManager {
+  public constructor(
+    @inject(SERVICES.LOGGER) private readonly logger: Logger,
+    @inject(JobManagerWrapper) private readonly jobManagerClient: JobManagerWrapper
+  ) {}
+
+  public async getTaskStatusByJobId(jobId: string): Promise<ITaskStatusResponse> {
+    this.logger.info(`Getting task status by jobId: ${jobId}`);
+    const tasks = await this.jobManagerClient.getTasksByJobId(jobId);
+
+    if (tasks.length === 0) {
+      throw new NotFoundError(`jobId: ${jobId} is not exists`);
+    }
+    const task = tasks[0];
+    const statusResponse: ITaskStatusResponse = {
+      percentage: task.percentage,
+      status: task.status,
+    };
+    return statusResponse;
+  }
+}
