# src/createPackage/routes/tasksRouter.ts
@@ -1,0 +1,16 @@
+import { Router } from 'express';
+import { FactoryFunction } from 'tsyringe';
+import { TasksController } from '../controllers/tasksController';
+
+const tasksRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
+  const router = Router();
+  const controller = dependencyContainer.resolve(TasksController);
+
+  router.get('/taskStatus/:jobId', controller.getTaskStatusByJobId);
+
+  return router;
+};
+
+export const TASKS_ROUTER_SYMBOL = Symbol('tasksFactory');
+
+export { tasksRouterFactory };
